--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <CheckBox
+        android:id="@+id/task_done_categ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/task_item_padding"/>
 
     <TextView
         android:id="@+id/task_item_name"
@@ -11,10 +17,18 @@
         android:layout_weight="2"
         android:textColor="@color/black"/>
 
+    <ImageView
+        android:id="@+id/task_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:srcCompat="@drawable/ic_studies"
+        android:padding="@dimen/task_item_padding"/>
     <TextView
         android:id="@+id/task_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="2" />
+
+
 
 </LinearLayout>
